<resources>
    <string name="app_name">MIT Mobile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_icon">Drawer Icon</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_dining">Dining</string>
    <string name="title_activity_emergency">Emergency Info</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_events_calendars">Calendars</string>
    <string name="title_activity_facilities">Facilities</string>
    <string name="title_activity_libraries">Libraries</string>
    <string name="title_activity_links">Links</string>
    <string name="title_activity_maps">Maps</string>
    <string name="title_activity_news">MIT News</string>
    <string name="title_activity_people">People</string>
    <string name="title_activity_qrreader">Qr Reader</string>
    <string name="title_activity_mobius">Mobius</string>
    <string name="title_activity_shuttles">Shuttles</string>
    <string name="title_activity_tours">Tours</string>
    <string name="title_activity_intro_mit">Introduction to MIT</string>
    <string name="title_activity_tour_directions">Walking Directions</string>
    <string name="title_activity_news_category">NewsCategoryActivity</string>
    <string name="title_activity_news_image_gallery">NewsImageGalleryActivity</string>
    <string name="title_activity_events_detail">Event Details</string>
    <string name="title_activity_maps_categories">Categories</string>
    <string name="title_activity_scanner_info">Info</string>
    <string name="title_activity_scanner_history">History</string>
    <string name="title_activity_scanner_history_detail">Scan Detail</string>
    <string name="resource_info_text">Use this tool to find machines and machine shops at MIT.</string>
    <string name="title_activity_view_resource">ViewResourceActivity</string>
    <string name="title_activity_resource_view">ResourceViewActivity</string>
    <string name="title_activity_shuttle_stops">ShuttleStopsActivity</string>
    <string name="resource_shops">BROWSE SHOPS &amp; LABS</string>
    <string name="resource_types">BROWSE MACHINE TYPES</string>
    <string name="advanced_search">ADVANCED SEARCH</string>
    <string name="roomset_open">Open</string>
    <string name="roomset_closed">Closed</string>
    <string name="resource_online">Online</string>
    <string name="resource_offline">Offline</string>
    <string name="shuttle_contact_title">CONTACT INFORMATION</string>
    <string name="shuttle_mbta_title">MBTA INFORMATION</string>
    <string name="parking_office_name">Parking Office</string>
    <string name="parking_office_number">617.258.6510</string>
    <string name="saferide_name">Saferide</string>
    <string name="saferide_number">617.253.2997</string>
    <string name="real_time_bus">Real-time Bus Arrivals</string>
    <string name="real_time_train">Real-time Train Arrivals</string>
    <string name="google_transit">Google Transit</string>
    <string name="real_time_bus_url">http://www.nextbus.com/webkit</string>
    <string name="real_time_train_url">http://www.mbtainfo.com/</string>
    <string name="real_time_google_transit_url">http://www.google.com/transit</string>
    <string name="ok_button">Ok</string>
    <string name="cancel_button">Cancel</string>
    <string name="route_in_service">In service</string>
    <string name="route_not_in_service">Not in service</string>
    <string name="route_unknown">No current predictions</string>
    <string name="bell_info">Tap bell to be notified 5 minutes before arrival.</string>
    <string name="intersecting_routes">INTERSECTING ROUTES</string>
    <string name="other_routes_info">Other routes stopping at or near this stop.</string>
    <string name="arriving_now">Arriving now</string>
    <string name="arriving_in">Arriving in</string>
    <string name="minutes">minutes</string>
    <string name="alarm_set">Alarm Set</string>
    <string name="empty_predictions">No current predictions</string>
    <string name="empty_intersecting">No intersecting routes</string>
    <string name="alert_descr_1">arriving at</string>
    <string name="alert_descr_2">in</string>
    <string name="alert_descr_3">and</string>
    <string name="alert_descr_4">minutes.</string>
    <string name="title_activity_tour_self_guided">Self-Guided Tour</string>
    <string name="more_guided_tours">More about guided tours…</string>
    <string name="more_about_mit">More about MIT…</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="mit_info_center">MIT Information Center</string>
    <string name="mit_admissions">MIT Admissions</string>
    <string name="open_button">Open</string>
    <string name="feedback_subject">Feedback for MIT Mobile</string>
    <string name="mit_about_guided_tour_url">http://web.mit.edu/institute-events/events/</string>
    <string name="mit_admissions_url">http://mitadmissions.org/</string>
    <string name="guided_tour_info">Regularly scheduled student-led campus tours are conducted Monday through Friday at 11 am and at 3 pm, excluding legal US holidays and the winter break period.</string>
    <string name="about_mit_info">The misson of MIT is to advance knowledge and educate students in science, technology, and other areas of scholarship that will best serve the nation and the world in the 21st century.</string>
    <string name="main_loop">MAIN LOOP</string>
    <string name="side_trips">SIDE TRIPS</string>
    <string name="restrictions">Videotaping and photography are prohibited inside MIT buildings.</string>
    <string name="title_activity_tour_detail">Tour Details</string>
    <string name="tour_details">Tour Details…</string>
    <string name="stop_nav_main_loop">Main Loop %1$s of %2$s</string>
    <string name="stop_nav_side_trip">Side Trip</string>
    <string name="near_here_recycler_view_title">Near Here</string>
    <string name="main_loop_recycler_view_title">Main Loop</string>
    <string name="near_here">Near Here</string>
    <string name="side_trip_directions">Step by step directions are not available for side trips</string>
    <string name="side_trip_directions_1">"Directions from "</string>
    <string name="side_trip_directions_2">" to "</string>
    <string name="people_search_hint">MIT People Directory</string>
    <string name="people_default_sample_search_title">Sample searches:</string>
    <string name="people_default_sample_search_examples">Name: \'william barton rogers\', \'rogers\'\nEmail: \'wbrogers\', \'wbrogers@mit.edu\'\nPhone: \'6172531000\', \'31000\'</string>
    <string name="people_default_directory_assistance_button_title">Directory Assistance</string>
    <string name="people_default_emergency_contacts_button_title">Emergency Contacts</string>
    <string name="fragment_people_person_detail_contact_management_create_new">Create New Contact</string>
    <string name="fragment_people_person_detail_contact_management_add_existing">Add To Existing Contact</string>
    <string name="fragment_people_person_detail_contact_management_add_favorites">Add to Favorites</string>
    <string name="fragment_people_person_detail_contact_management_remove_favorites">Remove from Favorites</string>
    <string name="fragment_people_person_detail_contact_management_add_or_edit_existing">Add or Edit Existing Contact</string>
    <string name="title_activity_person_detail">PersonDetailActivity</string>
    <string name="people_tel_directory_assistance">6172531000</string>
    <string name="people_default_favorites_list_title">FAVORITES</string>
    <string name="title_activity_emergency_contacts">All Emergency Contacts</string>
    <string name="speaker">speaker</string>
    <string name="time">time</string>
    <string name="location">location</string>
    <string name="phone">phone</string>
    <string name="website">website</string>
    <string name="open_to">open to</string>
    <string name="sponsor">sponsor</string>
    <string name="cost">cost</string>
    <string name="series_info">This event is part of a series</string>
    <string name="for_more_info">for more information, contact</string>
    <string-array name="test">
        <item>test 1</item>
        <item>test 2</item>
        <item>test 3</item>
    </string-array>
    <string-array name="days">
        <item>S</item>
        <item>M</item>
        <item>T</item>
        <item>W</item>
        <item>T</item>
        <item>F</item>
        <item>S</item>
    </string-array>
    <string name="open_in_browser_q">Open in Browser?</string>
    <string name="share_via">Share via</string>
    <string name="no_results">No Results</string>
    <string name="title_activity_events_details">EventsDetailsActivity</string>
    <string name="calendar_header_registrar">REGISTRAR CALENDAR</string>
    <string name="calendar_header_events">EVENTS CALENDARS</string>
    <string name="calendar_all_events">All Events</string>
    <string name="calendar_action_menu_done">DONE</string>
    <string name="today">TODAY</string>
    <string name="calendars">CALENDARS</string>
    <string name="event_search_hint_template" formatted="false">\"%s\"</string>
    <string name="event_search_hint_with_category_template" formatted="false">\"%s\" in %s</string>
    <string name="event_filter_header">FILTERS</string>
    <string name="event_filter_clear">Clear</string>
    <string name="event_recent_header">RECENTS</string>
    <string name="title_activity_dining_retail">DiningRetailActivity</string>
    <string name="venue_menu">menu</string>
    <string name="venue_payment">payment</string>
    <string name="venue_hours">hours</string>
    <string name="venue_location">location</string>
    <string name="venue_homepage">home page</string>
    <string name="venue_add_to_favs">ADD TO FAVORITES</string>
    <string name="venue_remove_from_favs">REMOVE FROM FAVORITES</string>
    <string name="open_until">"Open until "</string>
    <string name="closed">Closed</string>
    <string name="dining_tab_house_dining">HOUSE DINING</string>
    <string name="dining_tab_retail">RETAIL</string>
    <string name="dining_house_section_announcements">ANNOUNCEMENTS</string>
    <string name="dining_house_section_venues">VENUES</string>
    <string name="dining_house_section_resources">RESOURCES</string>
    <string name="dining_venue_status_open">Open</string>
    <string name="dining_venue_status_closed">Closed</string>
    <string name="dining_venue_closed_for_the_day">Closed for the day</string>
    <string name="dining_venue_start_end_template" formatted="false">%s - %s</string>
    <string name="retail_category_favorites">Favorites</string>
    <string name="retail_category_other">Other</string>
    <string name="close_today">Closed for the day</string>
    <string name="filters_activity_title">Filters</string>
    <string name="filter_farm">Farm to Fork</string>
    <string name="filter_well">For Your Well-Being</string>
    <string name="filter_halal">Halal</string>
    <string name="filter_humane">Humane</string>
    <string name="filter_balance">In Balance</string>
    <string name="filter_kosher">Kosher</string>
    <string name="filter_gluten">Made without Gluten</string>
    <string name="filter_organic">Organic</string>
    <string name="filter_seafood">Seafood Watch</string>
    <string name="filter_vegan">Vegan</string>
    <string name="filter_vegetarian">Vegetarian</string>
    <string name="username_or_email">Username or Email</string>
    <string name="pwd">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_info">Log in with your MIT Kerberos username or Touchstone Collaboration Account to continue.</string>
    <string name="remember_login">Remember Login</string>
</resources>