<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_farm_to_fork_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_farm"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_well_being_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_well"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_halal_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_halal"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_humane_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_humane"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_in_balance_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_balance"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_well_being_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_kosher"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_gluten_free_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_gluten"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_organic_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_organic"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_seafood_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_seafood"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_vegan_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_vegan"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

        <LinearLayout
            style="@style/MITDiningFilterRow">

            <ImageView
                style="@style/MITDiningFilterIcon"
                android:src="@drawable/dining_meal_vegetarian_big"/>

            <TextView
                style="@style/MITDiningFilterName"
                android:text="@string/filter_vegetarian"/>

            <ImageView
                style="@style/MITDiningFilterIcon.Check"/>

        </LinearLayout>

        <View
            style="@style/MITDiningFilterDivider"/>

    </LinearLayout>

</ScrollView>