<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/shuttle_phone_cell_top_padding">

    <TextView
        android:id="@+id/shuttle_contact_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
        android:paddingBottom="@dimen/shuttle_routes_content_padding"
        android:text="@string/shuttle_contact_title"
        android:textColor="@color/mit_grey"
        android:textSize="@dimen/shuttle_home_content_size"
        />

    <View
        style="@style/MITShuttleRoutesView"
        />

    <RelativeLayout
        android:id="@+id/park_office"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shuttle_phone_cell_height"
        android:background="@drawable/shuttle_route_selector">

        <ImageView
            android:id="@+id/parkingoffice_imageview"
            style="@style/MITShuttleRoutesImage"
            android:src="@drawable/phone"
            android:tint="@color/mit_red"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
            android:layout_toRightOf="@id/parkingoffice_imageview"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/contents_text"
                android:textSize="@dimen/shuttle_home_content_size"
                android:text="@string/parking_office_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/shuttle_phone_number_top_padding"
                android:textColor="@color/mit_grey"
                android:textSize="@dimen/shuttle_home_phone_size"
                android:text="@string/parking_office_number"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/saferide"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shuttle_phone_cell_height"
        android:background="@drawable/shuttle_route_selector">
        <ImageView
            android:id="@+id/saferide_imageview"
            style="@style/MITShuttleRoutesImage"
            android:src="@drawable/phone"
            android:tint="@color/mit_red"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
            android:layout_toRightOf="@id/saferide_imageview"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/contents_text"
                android:textSize="@dimen/shuttle_home_content_size"
                android:text="@string/saferide_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/shuttle_phone_number_top_padding"
                android:textColor="@color/mit_grey"
                android:textSize="@dimen/shuttle_home_phone_size"
                android:text="@string/saferide_number"
                />
        </LinearLayout>
    </RelativeLayout>

    <View
        style="@style/MITShuttleRoutesView"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/shuttle_phone_cell_top_padding"
        android:paddingBottom="@dimen/shuttle_routes_content_padding"
        android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
        android:text="@string/shuttle_mbta_title"
        android:textColor="@color/mit_grey"
        android:textSize="@dimen/shuttle_home_content_size"
        />

    <View
        style="@style/MITShuttleRoutesView"
        />

    <LinearLayout
        android:id="@+id/real_time_bus_arrivals"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shuttle_home_cell_height"
        android:background="@drawable/shuttle_route_selector"
        android:orientation="horizontal">
        <ImageView
            style="@style/MITShuttleRoutesImage"
            android:layout_gravity="center_vertical"
            android:src="@drawable/open_in_browser"
            android:tint="@color/mit_red"
            />
        <TextView
            style="@style/MITShuttleRoutesStopsContent"
            android:text="@string/real_time_bus"
            android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
            android:layout_gravity="center_vertical"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/real_time_train_arrivals"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shuttle_home_cell_height"
        android:background="@drawable/shuttle_route_selector"
        android:orientation="horizontal">
        <ImageView
            style="@style/MITShuttleRoutesImage"
            android:layout_gravity="center_vertical"
            android:src="@drawable/open_in_browser"
            android:tint="@color/mit_red"
            />
        <TextView
            style="@style/MITShuttleRoutesStopsContent"
            android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
            android:text="@string/real_time_train"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/google_transit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/shuttle_home_cell_height"
        android:background="@drawable/shuttle_route_selector"
        android:orientation="horizontal">
        <ImageView
            style="@style/MITShuttleRoutesImage"
            android:layout_gravity="center_vertical"
            android:src="@drawable/open_in_browser"
            android:tint="@color/mit_red"
            />
        <TextView
            style="@style/MITShuttleRoutesStopsContent"
            android:paddingLeft="@dimen/shuttle_routes_info_content_margin"
            android:text="@string/google_transit"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>
</LinearLayout>